# spacey

./: .cursorignore  .gitignore  Cargo.toml  LICENSE  TODO.md
.github/workflows/: bench.yml  ci.yml  codeql.yml  release.yml  test262.yml
crates/spacey-browser/: Cargo.toml
crates/spacey-browser/src/: ai_ui.rs  browser.rs  extensions_ui.rs  lib.rs  main.rs  page.rs  renderer.rs
crates/spacey-browser/src/ai/: agent.rs  memory.rs  mod.rs  model.rs  planner.rs  provider.rs
crates/spacey-browser/src/ai/tools/: click.rs  execute_js.rs  extract.rs  mod.rs  navigate.rs  screenshot.rs  scroll.rs  type_text.rs  wait.rs
crates/spacey-browser/src/extensions/: amo.rs  loader.rs  manifest.rs  mod.rs  runtime.rs
crates/spacey-browser/src/extensions/apis/: mod.rs  storage.rs  webrequest.rs
crates/spacey-browser/src/licensing/: apple.rs  mod.rs  steam.rs  windows.rs
crates/spacey-browser/src/shield/: blocklist.rs  disconnect.rs  fingerprint.rs  mod.rs  tracker.rs
crates/spacey-browser/tests/: ai_agent_test.rs
crates/spacey-browser/ui/spacey-ui/: README.md  angular.json  package-lock.json  package.json
crates/spacey-browser/ui/spacey-ui/src/: index.html  styles.css
crates/spacey-browser/ui/spacey-ui/src/app/: app.component.css  app.component.html  app.component.ts  app.routes.ts
crates/spacey-browser/ui/spacey-ui/src/app/components/ai-chat/: ai-chat.component.css  ai-chat.component.html  ai-chat.component.ts
crates/spacey-browser/ui/spacey-ui/src/app/pages/bugreport/: bugreport.component.css  bugreport.component.html  bugreport.component.ts
crates/spacey-browser/ui/spacey-ui/src/app/pages/bugreport-thanks/: bugreport-thanks.component.css  bugreport-thanks.component.html  bugreport-thanks.component.ts
crates/spacey-browser/ui/spacey-ui/src/app/pages/settings/: settings.component.css  settings.component.html  settings.component.ts
crates/spacey-browser/ui/spacey-ui/src/app/pages/welcome/: welcome.component.css  welcome.component.html  welcome.component.ts
crates/spacey-browser/ui/spacey-ui/src/app/services/: ai-provider.service.ts  system-info.service.ts
crates/spacey-macros/: Cargo.toml
crates/spacey-node/: Cargo.toml
crates/spacey-node/src/: lib.rs
crates/spacey-servo/: Cargo.toml  README.md
crates/spacey-servo/examples/: basic.rs  simple.rs
crates/spacey-servo/src/: bindings.rs  event_loop.rs  lib.rs  runtime.rs
crates/spacey-spidermonkey/: Cargo.toml
crates/spacey-spidermonkey/src/: lib.rs
crates/spacey-spidermonkey/src/ast/: mod.rs
crates/spacey-spidermonkey/src/builtins/: array.rs  collections.rs  date.rs  error.rs  global.rs  json.rs  mod.rs  native.rs  number.rs  object.rs  regexp.rs  string.rs
crates/spacey-spidermonkey/src/compiler/: bytecode.rs  codegen.rs  mod.rs
crates/spacey-spidermonkey/src/compiler/codegen/: mod.rs
crates/spacey-spidermonkey/src/gc/: mod.rs  object.rs
crates/spacey-spidermonkey/src/lexer/: mod.rs  scanner.rs  token.rs
crates/spacey-spidermonkey/src/parser/: mod.rs  parser.rs
crates/spacey-spidermonkey/src/runtime/: context.rs  environment.rs  mod.rs  object.rs  promise.rs  proxy.rs  symbol.rs  value.rs  weakref.rs
crates/spacey-spidermonkey/src/vm/: interpreter.rs  mod.rs  number_methods.rs  regexp_methods.rs  runtime_object.rs
docs/: TODO-ES2015.md  TODO-ES2016.md  TODO-ES2017.md  TODO-ES2018.md  TODO-ES2019.md  TODO-ES2020.md  TODO-ES2021.md  TODO-ES2022.md  TODO-ES5.md
scripts/: publish.sh
src/: lib.rs  main.rs  repl.rs
website/public/: llms.txt  sitemap.xml
website/src/app/: app.routes.ts
website/src/app/pages/crates/: crates.css  crates.html  crates.ts
website/src/app/pages/home/: home.html
