[workspace]
resolver = "2"
members = [
    "crates/spacey-macros",
    "crates/spacey-spidermonkey",
    "crates/spacey-node",
    "crates/spacey-npm",
    "crates/spacey-servo",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"
authors = ["Pegasus Heavy Industries, LLC"]
repository = "https://github.com/pegasusheavy/spacey"

[workspace.dependencies]
# Shared dependencies across workspace
spacey-macros = { path = "crates/spacey-macros" }
spacey-spidermonkey = { path = "crates/spacey-spidermonkey" }
spacey-servo = { path = "crates/spacey-servo" }
tokio = { version = "1.42", features = ["rt-multi-thread", "fs", "sync", "macros"] }

[package]
name = "spacey"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "A modern JavaScript engine and runtime inspired by SpiderMonkey"
keywords = ["javascript", "engine", "ecmascript", "repl", "runtime"]
categories = ["compilers", "command-line-utilities", "web-programming"]

[dependencies]
spacey-spidermonkey = { workspace = true }

# Async runtime
tokio = { workspace = true }

# CLI argument parsing
clap = { version = "4.5", features = ["derive"] }

# REPL dependencies
rustyline = { version = "14.0", features = ["derive"] }
owo-colors = "4.0"
dirs = "5.0"

[dev-dependencies]
cargo-husky = { version = "1.5", default-features = false, features = ["user-hooks"] }

[package.metadata.husky]
# See .husky/ directory for hook scripts
