[package]
name = "spacey-browser"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Minimal browser using Spacey JavaScript engine with Servo rendering"

[lib]
name = "spacey_browser"
path = "src/lib.rs"

[[bin]]
name = "spacey-browser"
path = "src/main.rs"

[dependencies]
# Spacey components
spacey-spidermonkey = { workspace = true }
spacey-servo = { workspace = true }
raw-window-handle = "0.6"

# HTTP client for fetching pages
reqwest = { version = "0.12", features = ["blocking", "json"] }

# URL handling
url = "2.5"

# Async runtime
tokio = { workspace = true, features = ["full"] }

# Logging
log = "0.4"
env_logger = "0.11"
pollster = "0.3"
html5ever = "0.27"
markup5ever = "0.12"
markup5ever_rcdom = "0.3"
egui = "0.28"
egui-wgpu = "0.28"
egui-winit = "0.28"
winit = "0.29"
wgpu = "0.20"

# AI/ML - Candle framework for Phi-3 model
candle-core = "0.8"
candle-nn = "0.8"
candle-transformers = "0.8"
hf-hub = "0.3"
tokenizers = "0.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async utilities for AI
futures = "0.3"
parking_lot = "0.12"
thiserror = "1.0"

# Extension system
zip = "2.1"
regex = "1.10"
urlencoding = "2.1"
dirs = "5.0"
base64 = "0.22"
png = "0.17"

# Steam integration (optional)
steamworks = { version = "0.11", optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tempfile = "3.10"

[features]
default = []
cuda = ["candle-core/cuda"]
metal = ["candle-core/metal"]
steam = ["steamworks"]