[package]
name = "spacey-node"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Node.js-compatible runtime for the Spacey JavaScript engine"
readme = "README.md"
keywords = ["nodejs", "runtime", "javascript", "server", "async"]
categories = ["command-line-utilities", "web-programming"]

[[bin]]
name = "spacey-node"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
# The SpiderMonkey-inspired JavaScript engine
spacey-spidermonkey = { path = "../spacey-spidermonkey" }

# Async runtime (libuv equivalent)
tokio = { version = "1.42", features = ["full"] }

# HTTP server/client
hyper = { version = "1.5", features = ["full"] }
hyper-util = { version = "0.1", features = ["full", "tokio"] }
http-body-util = "0.1"

# TLS support
rustls = { version = "0.23", default-features = false, features = ["std", "tls12"] }
tokio-rustls = "0.26"
webpki-roots = "0.26"
rustls-pemfile = "2.2"

# Cryptography
ring = "0.17"
base64 = "0.22"
hex = "0.4"

# CLI
clap = { version = "4.5", features = ["derive"] }

# REPL
rustyline = { version = "14.0", features = ["derive"] }

# Utilities
bytes = "1.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
owo-colors = "4.1"
dashmap = "6.1"
crossbeam = "0.8"
uuid = { version = "1.11", features = ["v4"] }
url = "2.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
anyhow = "1.0"
async-trait = "0.1"
futures = "0.3"
parking_lot = "0.12"

# Compression (zlib)
flate2 = "1.0"

# File watching
notify = "7.0"

# DNS
trust-dns-resolver = "0.23"

# System info
sysinfo = "0.32"

# Process management
nix = { version = "0.29", features = ["process", "signal", "user"] }

# TTY detection
atty = "0.2"

# Regex
regex = "1.11"

# Directories
dirs = "5.0"

# Glob patterns for tsconfig
glob = "0.3"

[dev-dependencies]
tempfile = "3.14"

